// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PassCode Snapshot tests should match snapshot with code length 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="inputProgressContainer"
    >
      <div
        class="gap vertical"
        data-gap-size="size-16"
      />
      <div
        class="component"
      >
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
      </div>
      <div
        class="gap vertical"
        data-gap-size="size-26"
      />
    </div>
    <div
      class="component"
    >
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          1
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          2
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          3
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          4
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          5
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          6
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          7
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          8
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          9
        </span>
      </button>
      <div />
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary iconOnly button secondary digit"
        type="button"
      >
        0
      </button>
      <div />
    </div>
  </div>
</div>
`;

exports[`PassCode Snapshot tests should match snapshot with unknown code length 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="inputProgressContainer"
    >
      <div
        class="gap vertical"
        data-gap-size="size-16"
      />
      <div
        class="component"
      />
      <div
        class="gap vertical"
        data-gap-size="size-26"
      />
    </div>
    <div
      class="component"
    >
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          1
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          2
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          3
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          4
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          5
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          6
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          7
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          8
        </span>
      </button>
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary button secondary digit"
        type="button"
      >
        <span
          class="label stretchText"
        >
          9
        </span>
      </button>
      <div />
      <button
        class="component secondary size-56 hug size-56 component secondary component secondary iconOnly button secondary digit"
        type="button"
      >
        0
      </button>
      <div />
    </div>
  </div>
</div>
`;
